# cube

./: .gitignore
CmakeBuildPlugin/: Package.swift  README.md
CmakeBuildPlugin/Plugins/CmakeBuildPlugin/: plugin.swift
Cube/: CMakeCache.txt  Makefile  cmake_install.cmake  cube.cpp
CubeKit/: Package.swift
CubeKit/.swiftpm/xcode/xcshareddata/xcschemes/: Cube.xcscheme
CubeKit/Sources/CubeKit/: CubeView.swift
CubeKit/Sources/OCCubeKit/: OCDemo.mm
CubeKit/Sources/libCube/: cube.cpp
CubeiOS/CubeiOS/: ContentView.swift  CubeiOSApp.swift
CubeiOS/CubeiOS.xcodeproj/: project.pbxproj
CubeiOS/CubeiOS.xcodeproj/project.xcworkspace/xcuserdata/morrisj.xcuserdatad/: UserInterfaceState.xcuserstate
CubeiOS/CubeiOS.xcodeproj/xcshareddata/xcschemes/: CubeiOS.xcscheme
CubeiOS/CubeiOS.xcodeproj/xcuserdata/morrisj.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CubeiOS/CubeiOS.xcodeproj/xcuserdata/morrisj.xcuserdatad/xcschemes/: xcschememanagement.plist
SwiftCube/: Package.swift  README.md
SwiftCube/Sources/Cube/: CubeView.swift
SwiftCube/Sources/OCCube/: Demo.mm
SwiftCube/Sources/OCCube/include/: Demo.h  OCDemo.h
SwiftCube/Sources/SwiftElephant/: SwiftElephant.swift
SwiftCube/Tests/SwiftElephantTests/: SwiftElephantTests.swift
SwiftCube/cube.xcframework/: Info.plist
SwiftCube/cube.xcframework/ios-arm64/Headers/: cube.h
SwiftCube2/: Package.swift  README.md
SwiftCube2/Sources/SwiftCube2/: SwiftCube2.swift
SwiftCube2/Tests/SwiftCube2Tests/: SwiftCube2Tests.swift
libCube/: CMakeCache.txt  CMakeLists.txt  Makefile  build-xcframework  cmake_install.cmake  cube.cpp
libCube/include/: cube.h  demo.h
